--- a/data-analyst.html
+++ b/data-analyst.html
@@ -109,13 +109,13 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agiledss1.recruitee.com/l/en/o/data-analyst-big-data-and-bi'>
+<h5><a href='https://agiledss1.recruitee.com/l/en/o/data-analyst-big-data-and-bi'>
       Data Analyst (Big Data and BI) - agileDSS
     </a></h5> 
 <p><span class="badge badge-light">Montr?al, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
+<h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -243,7 +243,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
+<h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore, Singapore  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -350,7 +350,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">Los Angeles, CA  Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
+<h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The team is looking to hire a Data Analyst to support the strategic Cost 
 Intelligence initiative. This initiative is focused on collecting and curating the 
@@ -399,7 +399,7 @@ organization?...</p>
 <p><span class="badge badge-light">North America North America Tennessee  North America</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -498,7 +498,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
